--- a/src/css/style.css
+++ b/src/css/style.css
@@ -242,7 +242,7 @@ body {
 .hero.container {
   margin: 60px auto 0;
   width: 80vw;
-  height: 70vh;
+  height: 80vh;
   background-color: #EAE0D5;
   border-radius: 21px;
   background: #EAE0D5;
@@ -253,7 +253,7 @@ body {
   align-items: center;
 }
 .hero.container .head-title {
-  font-size: 30px;
+  font-size: 25px;
   font-family: "Baloo 2", cursive;
   font-weight: bold;
   color: #5E503F;
@@ -261,7 +261,7 @@ body {
   padding: 20px;
 }
 .hero.container .head-p {
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Baloo 2", cursive;
   font-weight: bold;
   color: #5E503F;
@@ -297,7 +297,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 80vw;
-  height: 30vh;
+  height: 35vh;
   background-color: #EAE0D5;
   border-radius: 21px;
   background: #EAE0D5;
@@ -307,7 +307,7 @@ body {
 }
 .left .img:nth-child(1),
 .right .img:nth-child(1) {
-  margin-top: 60px;
+  margin-top: 20px;
 }
 .left .img p,
 .right .img p {
@@ -332,7 +332,7 @@ body {
 }
 .left .text .feature-head,
 .right .text .feature-head {
-  font-size: 24px;
+  font-size: 20px;
   font-family: "Baloo 2", cursive;
   font-weight: bold;
   color: #5E503F;
@@ -340,10 +340,11 @@ body {
 }
 .left .text .feature-p,
 .right .text .feature-p {
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Roboto", sans-serif;
   color: #5E503F;
   font-weight: 280;
+  margin-bottom: 5px;
 }
 .left .text .btn,
 .right .text .btn {
@@ -355,6 +356,18 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.card {
+  width: 70vw;
+  height: 60vh;
+  background-color: #EAE0D5;
+  border-radius: 21px;
+  background: #EAE0D5;
+  box-shadow: 13px 13px 26px #d3cac0, -13px -13px 26px #fff6ea;
+}
+.card .apply-p {
+  font-size: 16px;
 }
 
 .get-card {
@@ -369,7 +382,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 80vw;
-  height: 30vh;
+  height: 35vh;
   background-color: #EAE0D5;
   border-radius: 21px;
   background: #EAE0D5;
@@ -480,11 +493,70 @@ body {
     font-weight: lighter;
   }
 
+  .hero.container {
+    width: 80vw;
+    height: 70vh;
+    background-color: #EAE0D5;
+    border-radius: 21px;
+    background: #EAE0D5;
+    box-shadow: 13px 13px 26px #d3cac0, -13px -13px 26px #fff6ea;
+  }
+  .hero.container .head-title {
+    font-size: 30px;
+    font-family: "Baloo 2", cursive;
+    font-weight: bold;
+    color: #5E503F;
+  }
+  .hero.container .head-p {
+    font-size: 18px;
+    font-family: "Baloo 2", cursive;
+    font-weight: bold;
+    color: #5E503F;
+  }
+
+  .left .img,
+.right .img {
+    width: 80vw;
+    height: 30vh;
+    background-color: #EAE0D5;
+    border-radius: 21px;
+    background: #EAE0D5;
+    box-shadow: 13px 13px 26px #d3cac0, -13px -13px 26px #fff6ea;
+  }
+  .left .img:nth-child(1),
+.right .img:nth-child(1) {
+    margin-top: 60px;
+  }
+  .left .text .feature-head,
+.right .text .feature-head {
+    font-size: 24px;
+    font-family: "Baloo 2", cursive;
+    font-weight: bold;
+    color: #5E503F;
+    margin-bottom: 20px;
+  }
+  .left .text .feature-p,
+.right .text .feature-p {
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;
+    color: #5E503F;
+    font-weight: 280;
+  }
+
   .card {
     width: 70vw;
   }
   .card .apply-p {
-    font-size: 18px;
+    font-size: 16px;
+  }
+
+  .get-card .img {
+    width: 80vw;
+    height: 35vh;
+    background-color: #EAE0D5;
+    border-radius: 21px;
+    background: #EAE0D5;
+    box-shadow: 13px 13px 26px #d3cac0, -13px -13px 26px #fff6ea;
   }
 }
 @media (min-width: 600px) {
